deployment/kubernetes-Kustomize/overlays/dev/patches/dev-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: job-scheduler
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
  namespace: job-scheduler
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-consumer
  namespace: job-scheduler
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-scheduler
  namespace: job-scheduler
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-cron-executor
  namespace: job-scheduler
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-manual-executor
  namespace: job-scheduler
spec:
  replicas: 3
