deployment/kubernetes-Kustomize/overlays/dev/patches/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-platform
  namespace: job-scheduler
spec:
  rules:
    - host: jobs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8091
